[package]
name = "bar-dec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bar_dec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.1"
image = "0.25.5"
imageproc = "0.25.0"
plotters = "0.3.7"
rustfft = "6.2.0"
